<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.AddRoomActivity">
    <Spinner
        android:id="@+id/spinnerRoomType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/select_room_type" />

    <EditText
        android:layout_marginBottom="15dp"
        android:id="@+id/editTextCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_capacity"
        android:inputType="number" />

    <EditText
        android:layout_marginBottom="15dp"
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_marginBottom="15dp"
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttonAddRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_room" />
</LinearLayout>